# pkg/api/docs/swagger.json
@@ -147,11 +147,10 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 0,
+                        "minimum": 1,
                         "type": "integer",
-                        "default": 0,
                         "description": " ",
-                        "name": "offset",
+                        "name": "cursor",
                         "in": "query"
                     }
                 ],
@@ -159,10 +158,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Task"
-                            }
+                            "$ref": "#/definitions/tasks.SvcListResp"
                         }
                     },
                     "400": {
@@ -817,6 +813,20 @@
                 "password": {
                     "type": "string",
                     "example": "paS$w0rd"
+                }
+            }
+        },
+        "tasks.SvcListResp": {
+            "type": "object",
+            "properties": {
+                "next_cursor": {
+                    "type": "integer"
+                },
+                "tasks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Task"
+                    }
                 }
             }
         },
